--- a/styles.css
+++ b/styles.css
@@ -53,3 +53,9 @@ main ul {
 main ul li {
     margin: 20px 10px;
 }
+
+.ableton-img {
+    display: block;
+    width: 50%;
+    margin: 0, auto;
+}
